--- a/index1.html
+++ b/index1.html
@@ -7,6 +7,6 @@
 
 <body>
   <h6>반갑습니다.여기는 두번째 페이지입니다.</h6>
-  <a href="https://wjdwltn123.github.io/Test/">여기를 클릭</a>
+  <a href="https://wjdwltn123.github.io/Test/">1</a>
 </body>
 </html>
